--- a/apps/twitch-statistics-page/index.html
+++ b/apps/twitch-statistics-page/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Streamers statistics page by pajelonek"
-    />
+    <meta name="description" content="Streamers statistics page by pajelonek"/>
     <title>Streamers statistics page by pajelonek</title>
   </head>
   <body>
